# vehicle_api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  dockerfile  makefile  observer.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0fade67657e1_initial_migration.py  a1c1e9fe914c_vehicles.py  e122c6fc87d4_init_vehicle.py  f146d98f866d_vehicles.py
app/: __init__.py  config.py  database.py  logging.py  main.py  schemas.py
app/contracts/: __init__.py  _contracts.py  exceptions.py
app/health/: __init__.py  router.py  services.py
app/middlewares/: log.py  time.py
app/utils/: utils.py
app/vehicles/: __init__.py  database.py  router.py  schemas.py  services.py
database/: migration.sql
html/src/: index.html  main.html
html/src/api/: dependencies.html  index.html
html/src/api/v1/: index.html
html/src/core/: config.html  error.html  index.html  session.html
html/src/crud/: base.html  index.html  repository.html
html/src/model/: index.html  vehicle.html
html/src/schemas/: index.html  vehicle.html
html/src/service/: index.html  services.html
src/: config.py  constants.py  database.py  error.py  main.py  schemas.py
src/api/: __init__.py  dependencies.py
src/api/dependecies/: database.py
src/api/errors/: __init__.py  db_error.py  http_error.py  not_found.py  uncought.py
src/api/routes/: __init__.py  api.py  service_health.py  vehicle.py
src/api/v1/: __init__.py
src/core/: __init__.py  config.py  error.py  logging.py  session.py
src/core/settings/: app.py  base.py  development.py  production.py
src/crud/: __init__.py  base.py  crud.py  repository.py  sqlalchemy_repo.py  vars.py
src/domain/: __init__.py  types.py
src/health/: __init__.py  constants.py  router.py  services.py
src/middlewares/: error_handler.py  log.py  time.py
src/model/: __init__.py  base.py  model.py  orm.py  sql_alchemy.py  valueobject.py  vehicle.py
src/models/: __init__.py
src/monads/: __init__.py  option.py  result.py
src/schemas/: __init__.py  data_response.py  vehicle.py
src/service/: __init__.py  constants.py  event.py  router.py  services.py
src/service/listener/: __init__.py  log_listener.py
src/utils/: __init__.py  utils.py
src/vehicle/: __init__.py  router.py  schemas.py
src/vehicles/: __init__.py  database.py  router.py  schemas.py  service.py  services.py
tests/: conftest.py  data.py  stubs.py
tests/e2e/: test_api_create.py  test_service_health.py
tests/integration/: test_crud_operation.py  test_model.py  test_orm_mapping.py
tests/unittests/: test_filter.py  test_health_services.py  test_service.py  test_utils.py  test_vehicle_endpoints.py  test_vehicle_services.py
tests/unittests/contracts/: test_contracts.py
tests/unittests/middlewares/: test_log.py  test_time.py
vehicle_api/: config.py  database.py  main.py  schemas.py
vehicle_api/api/dependecies/: __init__.py  database.py
vehicle_api/api/errors/: db_error.py  http_error.py  not_found.py  validation_error.py
vehicle_api/api/routes/: api.py  service_health.py  vehicle.py
vehicle_api/application/: pyproject.toml
vehicle_api/core/: config.py  error.py  logging.py
vehicle_api/core/settings/: app.py  development.py  production.py
vehicle_api/crud/: __init__.py  base.py  sqlalchemy_repo.py  vars.py
vehicle_api/domain/: error.py  pyproject.toml
vehicle_api/domain/shared/: aggregate.py  entities.py  result.py  value_objects.py
vehicle_api/health/: __init__.py  router.py  schemas.py  services.py
vehicle_api/infrastructure/: pyproject.toml
vehicle_api/middlewares/: __init__.py  error_handler.py  log.py
vehicle_api/model/: vehicle.py
vehicle_api/presentation/: config.py  database.py  error.py  logging.py  main.py  pyproject.toml
vehicle_api/presentation/health/: __init__.py  router.py  services.py
vehicle_api/presentation/middlewares/: log.py
vehicle_api/presentation/vehicles/: __init__.py  constants.py  database.py  router.py  schemas.py  services.py
vehicle_api/schemas/: data_response.py  vehicle.py
vehicle_api/service/: services.py
vehicle_api/tests/: conftest.py  data.py  stubs.py
vehicle_api/utils/: utils.py
vehicle_api/vehicles/: __init__.py  database.py  router.py  schemas.py  services.py
(+8 files in other folders)
