[tool.poetry]
name = "vehicle_api"
version = "0.1.0"
description = ""
authors = ["Markus Iorio <mbalzert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
fastapi = "^0.109.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
psycopg2-binary = "^2.9.9"
httpx = "^0.25.0"
asgi-correlation-id = "^4.3.1"
loguru = "^0.7.2"
uuid-utils = "^0.6.1"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
mypy = "^1.2.0"
pre-commit = "^3.2.2"
pytest = "^7.3.2"
pdoc3 = "^0.10.0"
coverage = "^7.3.1"
pytest-asyncio = "^0.23.6"
aiosqlite = "^0.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 2
column_limit = 119
continuation_indent_width = 4
split_penalty_after_opening_bracket = 10000
SPLIT_BEFORE_DOT = true
allow_split_before_dict_value = false

[tool.ruff]
indent-width = 4
line-length = 119
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]

quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = ["A001","A002", "ANN001", "ANN101", "ANN102", "D211", "D212", "D107", "Q000"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
