[project]
name = "vehicle-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "fastapi[standard]>=0.115.4",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "asgi-correlation-id>=4.3.4",
    "loguru>=0.7.2",
    "uuid-utils>=0.9.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "aiosqlite>=0.20.0",
]
