[tool.poetry]
name = "infrastructure"
version = "0.1.0"
description = "Infrastructure layer of vehicle-api"
authors = ["mbalzert@gmail.com"]
packages = [
    { include = "infrastructure" }
]

[tool.poetry.dependencies]
python = "^3.10"
application = { path = "../application" }

sqlalchemy = "^2.0.31"
asgi-correlation-id = "^4.3.1"
uuid-utils = "^0.9.0"
