[tool.poetry]
name = "presentation"
version = "0.1.0"
description = "Presentation layer of vehicle-api"
authors = ["mbalzert@gmail.com"]
packages = [
    { include = "presentation" }
]

[tool.poetry.dependencies]
python = "^3.10"
infrastructure = { path = "../infrastructure" }
application = { path = "../application" }
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.4"
rusty-validator = "^0.1.1rc3"
asgi-correlation-id = "^4.3.1"
